2012-01-22  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* lib/kerosin/renderserver/rendercontrol.cpp (RenderControl::EndCycle): 
	* lib/kerosin/openglserver/openglserver.cpp (OpenGLServer::Init): 
	- check if opengl system wants to quit
	
	* plugin/openglsyssdl/openglsystemsdl.h (OpenGLSystemSDL.mWantsToQuit): 
	* plugin/openglsyssdl/openglsystemsdl.cpp (OpenGLSystemSDL::Update): 
	- handle SDL_QUIT event and add WantsToQuit function
	
	* lib/kerosin/openglserver/openglsystem.h (OpenGLSystem):
	- add WantsToQuit() function

2011-05-02  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* CMakeLists.txt: 
	- strip files when creating binary packages
	- installer enhancements for mingw32 based setup
	
	* plugin/odeimps/CMakeLists.txt: 
	* plugin/collisionperceptor/CMakeLists.txt: 
	- added complete ode dependencies

2011-05-01  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* cmake/FindODE.cmake: 
	- don't overwrite ode-config settings under windows platform (if available)
	
	* lib/kerosin/openglserver/openglserver.cpp (OpenGLServer::GetExtension): 
	* lib/salt/gmath.h: 
	* lib/salt/sharedlibrary.cpp: 
	* lib/zeitgeist/scriptserver/scriptserver.cpp: 
	- compilation fix under mingw32
	(ScriptServer::RunInitScriptInternal): 
	- enclose source and dest paths for copy command in double quotes
	
	* utility/rcssnet/socket.hpp: 
	* utility/rcssnet/tcpsocket.cpp: 
	* utility/rcssnet/udpsocket.cpp: 
	* utility/rcssnet/socket.cpp: 
	* utility/rcssnet/handler.hpp: 
	* utility/rcssnet/addr.cpp:
	- convert Winsock2.h to lowercase
	 
	* CMakeLists.txt: 
	- include AdditionalSearchPaths.cmake
	- use lower case name for Windows winsock header and library (for use with
	  mingw32 under Linux)
	- added a missing flag for linking modules with mingw32
	
	* cmake/AdditionalSearchPaths.cmake: 
	- sets up additional search paths under Windows to find dependencies in
	  common directories and the ones documented on the wiki
	
	* cmake/FindZLIB.cmake: 
	* cmake/FindFreetype.cmake: 